--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Evolution.
+<html>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Trocchi' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet/less" type="text/css" href="style.less">
+  <script src="less.js" type="text/javascript"></script>
+</head>
+<body>
+  <div style="width: 100%; text-align: center;">
+    <div id="content">
+      Incremental Evolution
+    </div>
+  </div>
+</body>
+</html>
