--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Trocchi' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet/less" type="text/css" href="style.less">
   <script src="less.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    less.watch();
+  </script>
 </head>
 <body>
+<noscript>
+  <div id="noscript">YOU SHOULD ENABLE JAVASCIRPT, BRO</div>
+</noscript>
   <div style="width: 100%; text-align: center;">
     <div id="content">
-      Incremental Evolution
+      <div class="opaque">Incremental Evolution</div>
+      <div class="small">One step at a time.</div>
     </div>
   </div>
 </body>
