--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet/less" type="text/css" href="style.less">
-  <script src="less.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    less.watch();
-  </script>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet/less" type="text/css" href="styles/style.less">
+  <script src="scripts/less.js" type="text/javascript"></script>
 </head>
 <body>
 <noscript>
