--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <link rel="stylesheet/less" type="text/css" href="styles/style.less">
-  <script src="scripts/less.js" type="text/javascript"></script>
-</head>
-<body>
-<noscript>
-  <div id="noscript">YOU SHOULD ENABLE JAVASCIRPT, BRO</div>
-</noscript>
-  <div style="width: 100%; text-align: center;">
-    <div id="content">
-      <div class="opaque">Incremental Evolution</div>
-      <div class="small">One step at a time.</div>
-    </div>
-  </div>
-</body>
-</html>
+---
+layout: default
+---
