--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 ---
-layout: default
+layout: header
+title: Incremental Evolution
 ---
+<div style="width: 100%; text-align: center;">
+  <div id="allposts">
+    {% for post in site.posts %}
+        <div id="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+        <div id="date">{{ post.date | date: "%Y.%m.%d" }}</div><br>
+      </tr>{% endfor %}
+    </ul>
+  </div>
+</div>
